Sun Jun 30 00:14:20 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (RBIGNUM_SET_NEGATIVE_SIGN): New macro.
	  (RBIGNUM_SET_POSITIVE_SIGN): Ditto.
	  (rb_big_neg): Inline get2comp to avoid double negation.

Sat Jun 29 23:26:41 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_neg): Extracted from bary_2comp.
	  (bary_plus_one): Extracted from bary_2comp.
	  (bary_2comp): Use bary_neg and bary_plus_one.
	  (big_extend_carry): Extracted from get2comp.
	  (get2comp): Use big_extend_carry.
	  (rb_integer_unpack): Use big_extend_carry.
	  (rb_big_neg): Use bary_neg.

Sat Jun 29 22:31:59 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_2comp): Simplified.

Sat Jun 29 09:33:53 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigor_int): Return -1 if y == -1.

Sat Jun 29 09:07:16 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigor_int): Use RB_GC_GUARD.
	  (bigxor_int): Take xn and hibitsx arguments.  Use twocomp2abs_bang.
	  (rb_big_xor): Use abs2twocomp and twocomp2abs_bang.

Sat Jun 29 08:19:58 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigand_int): Don't apply bitwise and for BDIGIT and long.
	  (bigor_int): Take xn and hibitsx arguments.  Use twocomp2abs_bang.
	  (rb_big_or): Use abs2twocomp and twocomp2abs_bang.

Fri Jun 29 01:08:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* numeric.c (fix_mul): remove FIT_SQRT_LONG test as it was causing
	  fix_mul to return an incorrect result for -2147483648*-2147483648
	  on 64 bit platforms

	* test/ruby/test_integer_comb.rb (class TestIntegerComb): add test case

Fri Jun 28 12:26:53 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big_and): Allocate new bignum with same size to shorter
	  argument if it's high bits are zero.

Fri Jun 28 12:14:04 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ipsocket.c (init_inetsock_internal): Don't use local
	  addresses which address family is different to remote address.

Fri Jun 28 08:06:22 2013  Tanaka Akira  <akr@fsij.org>
